# dev-platform-backend

./: .dockerignore  .gitignore  Dockerfile  gunicorn.conf.py  pyproject.toml  run.sh
config/: settings.py
